--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
